fix logo alignment bug for safari browser

--- a/src/styles.css
+++ b/src/styles.css
@@ -193,13 +193,12 @@ html {
     }
 
     .content {
-        display: grid;
-        justify-content: center;
+        display: flex;
+        flex-direction: column;
+        /* justify-content: center; */
+        align-items: center;
         grid-row: 1 / 2;
         grid-column: 2 / 3;
-        grid-template-columns: 1fr;
-        /* margin-left: minmax(300px, 1fr); */
-        grid-template-rows: minmax(10px, 50px) 9fr;
     }
 
     .menu-logo {
@@ -209,19 +208,16 @@ html {
         background-position: center;
 
         z-index: 1;
-        height: max(10%, 50px);
+        height: 75px;
         width: 40%;
-        position: fixed;
-        grid-column: 1 / 2;
-        grid-row: 1 / 2;
+        /* position: fixed; */
         justify-self: center;
         border-bottom: 0.5px white solid;
+        flex-shrink: 0;
     }
 
     .content-container {
         position: relative;
-        grid-column: 1 / 2;
-        grid-row: 2 / 3;
         padding: clamp(10px, 15vh, 100px) 20px 10px 20px;
         color: white;
         z-index: 2;
@@ -229,6 +225,7 @@ html {
         max-width: 700px;
         justify-self: center;
         display: flex;
+        flex-shrink: 1 1 0;
     }
 
     .content-container > div {
